# openstates-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: docker.yml
app/: README.md  __init__.py  __main__.py  config.py  server.py
app/tools/: __init__.py  bills.py  committees.py  events.py  jurisdictions.py  people.py
tests/: README.md  test_basic_validation.py  test_config.py  test_configuration.py  test_runner.py  test_server.py
